# django-resume

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
pages/templates/pages/: page_detail.html
projects/: admin.py  models.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_project_skills.py  0003_alter_project_category.py
projects/templates/projects/: project_list.html
resume_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
shortlinks/: admin.py
shortlinks/migrations/: 0001_initial.py
skills/: admin.py  models.py  views.py
skills/migrations/: 0001_initial.py
skills/templates/skills/: skill_list.html
static/css/: custom.css
static/js/: bootstrap.bundle.min.js  custom.js
templates/: base.html
